# PMB-PimpMyBackup

./: .cproject  .gitignore  .project  CMakeLists.txt  Installer.nsi  Makefile  README.md  README.md~  bah.sql  client_settings.ini  create_db.sql  create_user.sh  doxygen.conf  log.txt  mail_malnati  permessi servizio.txt  queryes.sql  server_settings.ini
Requirements/: da_chiedere.txt  protocollo.txt
Requirements/Analisys/: UML.asta
source/PMB_Gui/: .gitignore  PMB_Gui.sln
source/PMB_Gui/PMB_Gui/: App.xaml  App.xaml.cs  Connection.xaml  Connection.xaml.cs  Login.xaml  Login.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PMB_Gui.csproj  Pipe.cs  Settings.cs  Versions.xaml  Versions.xaml.cs
source/client/: actionmerger.cpp  actionmerger.h  change_entity.cpp  changeentity.cpp  client.cpp  directorylistener.cpp  filesystem.cpp  log.cpp  main.cpp  pipe.cpp  rules.mk  service.cpp  settings.cpp  taskqueue.cpp
source/client/include/: actionmerger.hpp  client.hpp  directorylistener.h  directorylistener.hpp  filesystem.hpp  log.hpp  pipe.hpp  service.hpp  settings.hpp  taskqueue.h
source/server/: database.cpp  main.cpp  rules.mk  servermain.cpp  service.cpp
source/server/include/: database.hpp  protocol.hpp  servermain.hpp  settings.hpp
source/test/: Makefile  main.cpp  rules.mk  shared_queue.cpp  socket.cpp  utilities.cpp  windows.cpp
source/utilities/: atbegin.hpp  atend.hpp  debug.cpp  exceptions.cpp  fsutil.cpp  settings.cpp  socket.cpp  socket.h  socket.hpp  strings.cpp  threadpool.cpp  threadpool.hpp
utilities/: resources.h  socket.cpp  socket.h  test.cpp
(+17 files in other folders)
